--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -2,6 +2,17 @@ name: Docker Phase
 
 on:
   workflow_call:
+    inputs:
+      context:
+        description: 'The build context for the Docker image'
+        required: false
+        type: string
+        default: '.'
+      dockerfile:
+        description: 'The path to the Dockerfile'
+        required: false
+        type: string
+        default: './Dockerfile'
 
 jobs:
   validate-image:
@@ -17,8 +28,8 @@ jobs:
       - name: Validar build da imagem Docker
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: ${{ inputs.context }}
+          file: ${{ inputs.dockerfile }}
           push: false
           tags: ${{ github.repository }}:${{ github.sha }}
           cache-from: type=gha
