--- a/.github/workflows/reusable-deploy-k8s.yml
+++ b/.github/workflows/reusable-deploy-k8s.yml
@@ -69,6 +69,8 @@ jobs:
 
       - name: Substituir IMAGE_TAG no Deployment
         run: |
+          echo "Contents of working directory: ${{ inputs.k8s-overlay-path }}"
+          ls -la ${{ inputs.k8s-overlay-path }}
           kustomize edit set image ${{ inputs.app-name }}=${{ secrets.DOCKER_USERNAME }}/${{ inputs.app-name }}:${{ inputs.image-tag }}
         working-directory: ${{ inputs.k8s-overlay-path }}
 
