--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
       image-tag: ${{ needs.publish-image.outputs.image-tag }}
       environment: producao # Or any other environment you target
       app-name: cliente-app # Name used in Kustomize for image replacement
-      k8s-overlay-path: k8s/overlays/${{ inputs.environment }} # Path to the kustomize overlay for cliente
+      k8s-overlay-path: k8s/overlays/producao # Path to the kustomize overlay for cliente
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
