--- a/k8s/base/app-deployment.yaml
+++ b/k8s/base/app-deployment.yaml
@@ -43,7 +43,7 @@ spec:
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: cliente-postgres-secret
+                  name: cliente-secret
                   key: SPRING_DATASOURCE_PASSWORD
             - name: ENV_NAME
               valueFrom:
