--- a/k8s/base/app-deployment.yaml
+++ b/k8s/base/app-deployment.yaml
@@ -30,17 +30,17 @@ spec:
           ports:
             - containerPort: 9091
           env:
-            - name: SPRING_DATASOURCE_URL
+            - name: DATASOURCE_URL
               valueFrom:
                 secretKeyRef:
                   name: cliente-secret
                   key: RDS_URL
-            - name: SPRING_DATASOURCE_USERNAME
+            - name: DATASOURCE_USERNAME
               valueFrom:
                 configMapKeyRef:
                   name: cliente-app-config
                   key: SPRING_DATASOURCE_USERNAME
-            - name: SPRING_DATASOURCE_PASSWORD
+            - name: DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: cliente-secret
