--- a/k8s/base/app-service.yaml
+++ b/k8s/base/app-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cliente-app-service
+  name: cliente-cliente-app-service
   namespace: oficina-ns
   labels:
     app: cliente-app
